--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "element-plus": "^2.2.27",
     "element-ui": "^2.15.12",
     "pinia": "^2.0.28",
